docs: improve virtual threads guide